fix apps button position on mobile

--- a/scss/layouts/_description.scss
+++ b/scss/layouts/_description.scss
@@ -28,6 +28,7 @@
         padding-left: 65px;
         position: relative;
         padding-bottom: 65px;
+        overflow: visible;
 
         &::after {
             width: 679px;
@@ -125,6 +126,7 @@
 
     &__app {
         display: flex;
+        align-self: center;
 
         &:hover {
             opacity: 0.6;
