--- a/scss/layouts/_hero.scss
+++ b/scss/layouts/_hero.scss
@@ -71,7 +71,6 @@
         position: relative;
 
         a {
-            display: block;
             height: 48px;
         }
 
